themes/red/assets/css/site.css
/* desktop devices */
@media (min-width: 768px) {
    header {
        margin: 5px;
    }

    aside {
        margin: 5px;

        flex: 15em 0 0;
    }

    article {
        margin: 5px;
    }

    footer {
        margin: 5px;
    }

    #content {
        display: flex;
        flex-direction: row;
        align-items: flex-start;
    }

    body {
        max-width: 100em;
    }

    .featured-art {
        height: 256px;
        width: auto;
    }

    .grid-sizer, .grid-item {
        width: 400px;
    }
}

/* mobile devices */
@media (max-width: 768px) {
    aside div {
        padding: 2px;
    }

    aside div a {
        font-size: 135%;
        margin-top: 13px;
        margin-bottom: 13px;
    }

    header {
        margin: 5px;
    }

    aside {
        margin: 5px;
    }

    article {
        margin: 5px;
    }

    footer {
        margin: 5px;
    }

    .featured-art {
        height: auto;
        width: 100%;
    }

    .grid-sizer, .grid-item {
        width: 100%;
        height: auto;
    }
}

body {
    background-color: var(--background-primary);
    accent-color: var(--accent-color);

    color: var(--text-color);
}


:root {
    --primary-accent: #9f5858;
    --secondary-accent: #c99192;
    --border-color: black;
    --background-primary: #ab4a2f;
    --background-secondary: #fdfdfd;
    --background-tertiary: #f0f0f0;
    --text-color: #363131;
    --link-visited: #460b0b;
    --extra-color: #efe4e4;
    --border: 3px double var(--border-color);
    --shadow: 3px 3px 0px black;
}

@media (prefers-color-scheme: dark) {
    :root {
        --primary-accent: #a3c3ff;
        --secondary-accent: #c99192;
        --background-primary: #34313a;
        --background-secondary: #3c3a44;
        --background-tertiary: #2e2c34;
        --border-color: #515860;
        --text-color: #fbeded;
        --link-visited: #75A6FF;
        --extra-color: #504e5a;
    }

    .external-link {
        filter: invert(100%);
    }
}

a:link {
    color: var(--primary-accent);
}

a:visited {
    color: var(--link-visited);
}

header {
    flex-grow: 1;
    flex-basis: 100%;
    color: var(--background-secondary);
}

header img {
    height: 3em;
    width: auto;
    vertical-align: middle;
    box-shadow: var(--shadow);
    border: var(--border);
    background-color: var(--background-secondary);
}

header h1 {
    display: inline;
    vertical-align: middle;
    margin-left: 0.25em;
}

@media (prefers-color-scheme: dark) {
    header h1 {
        color: white;
    }
}

aside {
    background-color: var(--background-secondary);

    text-align: center;

    border: var(--border);
    box-shadow: var(--shadow);
    border-radius: 3px;
    padding: 15px;
}

article {
    background-color: var(--background-secondary);

    border: var(--border);
    border-radius: 3px;
    box-shadow: var(--shadow);

    padding: 15px;

    min-width: 0;
    flex: 1 1 auto;
}

footer {
    background-color: var(--background-secondary);

    flex-grow: 1;
    flex-basis: 100%;

    border: var(--border);
    border-radius: 3px;
    box-shadow: var(--shadow);

    padding: 15px;
}

.site-menu {
    width: 100%;
    border: 1px solid gray;
    border-radius: 5px;
    margin-top: 5px;
    margin-bottom: 5px;
}

.gallery-img {
    border: 1px inset black;
    border-radius: 5px;
}

.article-img {
    max-width: 100%;
    max-height: 100%;
    height: auto;
}

figure {
    flex-grow: 1;
    text-align: center;
    margin: 25px;
}

figure figcaption {
    text-align: center;
}

.gallery-con {
    display: flex;
    flex-wrap: wrap;
    border: 1px dashed gray;
    border-radius: 5px;
    background-color: var(--background-tertiary);
}

.generic-con {
    border: 1px dashed gray;
    border-radius: 5px;
    background-color: var(--background-tertiary);

    padding: 20px;
}

.year-con {
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap;
}

.grid-item {
    margin-bottom: 10px;
    border: 1px inset black;
    border-radius: 3px;
}

.grid {
    padding-top: 20px;
    margin: 0 auto;
}

td {
    text-align: center;
}

tr:nth-child(even) {
    background-color: var(--extra-color) !important;
}

tbody > tr {
    background-color: var(--background-secondary);
}

table {
    width: 100%;
    border: 1px solid black;
    border-radius: 3px;
    background-color: var(--background-tertiary);
}

td {
    border: 1px inset black;
}

#f-badges {
    text-align: center;
}

#f-badges * {
    display: inline;
    margin-left: 0.2em;
    margin-right: 0.2em;
}

.f-list {
    text-align: center;
}

h2 {
    margin-top: 0.2em;
    margin-bottom: 0.2em;
}

iframe {
    border: 1px solid gray;
}

hr {
    background-color: var(--border-color);
    height: 1px;
    border: 0;
}

code {
    white-space: pre-wrap;
}

pre {
    background-color: var(--background-primary);

    padding: 5px;
}

.buttons {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    margin: auto;
}

.blurb {
    border: 1px solid gray;
    border-radius: 3px;

    padding: 1em;
    margin: .5em;

    box-shadow: var(--shadow)
}

.nice-list {
    display: inline;
    list-style: none;
    padding-left: 0;
    margin-bottom: 0;
    margin-top: 0;
}

.nice-list li {
    display: inline-block;
}

.nice-list li:not(:last-child) {
    margin-left: 0;
    margin-right: 0;
}

.toot-header .toot-profile img {
    border-radius: 9999px;
    width: 48px;
    height: auto;
}

.toot-blockquote {
    line-height: 1.35em;
    margin: 1.5rem auto;
    padding: 1rem;
    border: 2px solid gray;
    border-radius: 12px;
}

.toot-header .toot-author {
    display: flex;
    flex-direction: column;
    flex-grow: 1;

    margin-left: 10px;
    margin-top: 3px;
}

.toot-header .toot-author .toot-author-name {
    font-weight: 700;
}

.toot-header .toot-author .toot-author-handle {
    line-height: 1;
}

.toot-header {
    display: flex;
}

.nice-list li:not(:last-child):not(:only-child)::after {
    content: "·";
}

#about-pic {
    float: left;
    margin: 10px;
    border: 1px inset black;
}

.external-link {
    vertical-align: sub;
    margin-left: 2px;
}

.art-button-container {
    display: flex;
    flex-flow: row;
    gap: 10px;
}

.art-button {
    width: 100%;
    height: 50px;
    line-height: 50px;
    text-align: center;
    border: 1px outset black;
    border-radius: 5px;
    margin-top: 10px;
    margin-bottom: 10px;
}

.new-banner {
    border: 1px outset black;
    border-radius: 5px;
    padding: 5px;
    text-align: center;
    margin-bottom: 10px;
}

.no-decoration {
    text-decoration: none;
}

.banner-alert-icon {
    vertical-align: middle;
    margin-left: 5px;
    margin-right: 5px;
}

model-viewer {
    height: 600px;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
}

